# quality-time

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: main.yml
src/: git.rs  lib.rs  main.rs  metrics.rs  output.rs
src/cli/: concurrent.rs  formats.rs  mod.rs
src/output/: app.rs  mod.rs
src/output/app/: chart.rs  mod.rs  table.rs
tests/: integration_test.rs
