[package]
name = "quality-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = "0.0.24"
clap = { version = "^4.0", features = ["derive"] }
globset = "^0.4"
regex = "^1.7"
serde = "^1.0"
serde_cbor = "^0.11"
serde_json = "^1.0"
serde_yaml = "^0.9"
toml = "^0.5"
walkdir = "^2.3"
crossbeam = { version = "^0.8", features = ["crossbeam-channel"] }
git-repository = "0.31.0"