[package]
name = "quality-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = "0.0.24"
clap = { version = "^4.0", features = ["derive"] }
git-repository = "0.31.0"
comfy-table = "6.1.4"
tui = "0.19.0"
crossterm = "0.25"